      except the has_table() function does not work.  Reflection
      works too.
    - the Unicode type is now a direct subclass of String, which now
      contains all the "convert_unicode" logic.  This helps the variety
      of unicode situations that occur in db's such as MS-SQL to be
      better handled and allows subclassing of the Unicode datatype.
      [ticket:522]
    - column labels are now generated in the compilation phase, which
      means their lengths are dialect-dependent.  So on oracle a label
      that gets truncated to 30 chars will go out to 63 characters
      on postgres.  Also, the true labelname is always attached as the
      accessor on the parent Selectable so theres no need to be aware
      of the genrerated label names [ticket:512].
    - column label and bind param "truncation" also generate 
      deterministic names now, based on their ordering within the 
      full statement being compiled.  this means the same statement
      will produce the same string across application restarts and
      allowing DB query plan caching to work better.
    - the "mini" column labels generated when using subqueries, which
      are to work around glitchy SQLite behavior that doesnt understand
      "foo.id" as equivalent to "id", are now only generated in the case 
      that those named columns are selected from (part of [ticket:513])
    - MS-SQL better detects when a query is a subquery and knows not to
      generate ORDER BY phrases for those [ticket:513]
    - fix for fetchmany() "size" argument being positional in most
      dbapis [ticket:505]
    - sending None as an argument to func.<something> will produce
      an argument of NULL
    - query strings in unicode URLs get keys encoded to ascii
      for **kwargs compat
    - slight tweak to raw execute() change to also support tuples
      for positional parameters, not just lists [ticket:523]
- orm:
    - fixed critical issue when, after options(eagerload()) is used,